[package]
name = "personal_budget"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.3"
rocket_sync_db_pools = "0.1.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.29.0"
clap = {version = "4.0", features = ["derive"]}
rocket = {version = "0.5.1", features = ["json"]}
diesel = {version = "1.4.8", features = ["sqlite"]}