[package]
name = "personal_budget"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0", features = ["sqlite"] }
dotenvy = "0.15"
rocket_sync_db_pools = "0.5.0-rc.1"

[dependencies.rocket_dyn_templates]
version = "0.5.0-rc.1"
features = ["handlebars"]

[build-dependencies]
diesel_cli = { version = "2.2.4", features = ["sqlite"] }
